@@ -20,4 +20,11 @@ contributions to the Acegi Security System for Spring project:
   public automated Maven build at the Monkey Machine
   (http://www.monkeymachine.co.uk/acegi).
 
+* Patrick Burleson contributed a patch for Weblogic support.
+
+* Anyone else I've forgotten (please let me know so I can correct this).
+
+Plus of course all the people who use the project and provide feedback, bug
+reports, suggestions and help fellow users.
+
 $Id$
